// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CountryListRow > should render 1`] = `
<div
  class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[20px] h-[60px] [cursor:pointer] hover:bg-[color:var(--ch-bg)]"
  style="--ch-bg: var(--surface2);"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[32px] h-[32px] bg-neutral3 rounded-[999999px] overflow-hidden"
    >
      <img
        alt="US"
        aria-label="Country flag"
        height="32"
        src="https://images-country.meld.io/US/flag.svg"
        style="object-fit: cover;"
        width="32"
      />
    </div>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
    >
      United States
    </span>
  </div>
</div>
`;

exports[`CountryListRow > should render selected country 1`] = `
<div
  class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[20px] h-[60px] [cursor:pointer] hover:bg-[color:var(--ch-bg)]"
  style="--ch-bg: var(--surface2);"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px]"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 w-[32px] h-[32px] bg-neutral3 rounded-[999999px] overflow-hidden"
    >
      <img
        alt="US"
        aria-label="Country flag"
        height="32"
        src="https://images-country.meld.io/US/flag.svg"
        style="object-fit: cover;"
        width="32"
      />
    </div>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
    >
      United States
    </span>
  </div>
  <svg
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-width="8"
    style="width: 24px; height: 24px; color: rgb(19, 19, 19);"
    viewBox="0 0 48 48"
  >
    <line
      stroke="currentColor"
      x1="11"
      x2="18"
      y1="26"
      y2="33"
    />
    <line
      stroke="currentColor"
      x1="18"
      x2="38"
      y1="33"
      y2="14"
    />
  </svg>
</div>
`;
